Fixed position for side-menu on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -112,7 +112,7 @@ html, body {
 .hamburger-menu {
     height: 100vh;
     width: 70vw;
-    position: absolute;
+    position: fixed;
     left: 100vw;
     top: 0;
     background-color: $c-green;
